--- a/index.html
+++ b/index.html
@@ -27,10 +27,91 @@
         }
         .container { max-width: 800px; margin: 0 auto; padding: 0 20px; }
         
+        /* Glow orbs */
+        .hero-glow {
+            position: relative;
+            overflow: hidden;
+        }
+        .hero-glow::before {
+            content: '';
+            position: absolute;
+            top: -200px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 600px;
+            height: 600px;
+            background: radial-gradient(circle, rgba(236,176,10,0.15) 0%, rgba(236,176,10,0.05) 40%, transparent 70%);
+            border-radius: 50%;
+            pointer-events: none;
+            animation: glow-pulse 4s ease-in-out infinite;
+        }
+        .hero-glow::after {
+            content: '';
+            position: absolute;
+            top: -100px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 300px;
+            height: 300px;
+            background: radial-gradient(circle, rgba(236,176,10,0.2) 0%, transparent 60%);
+            border-radius: 50%;
+            pointer-events: none;
+            filter: blur(40px);
+            animation: glow-pulse 3s ease-in-out infinite reverse;
+        }
+        @keyframes glow-pulse {
+            0%,100% { opacity: 0.6; transform: translateX(-50%) scale(1); }
+            50% { opacity: 1; transform: translateX(-50%) scale(1.1); }
+        }
+        
+        /* Floating particles */
+        .particles {
+            position: absolute;
+            top: 0; left: 0; right: 0; bottom: 0;
+            overflow: hidden;
+            pointer-events: none;
+        }
+        .particle {
+            position: absolute;
+            width: 4px; height: 4px;
+            background: var(--accent);
+            border-radius: 50%;
+            opacity: 0;
+            animation: float-up 6s ease-in infinite;
+        }
+        .particle:nth-child(1) { left: 10%; animation-delay: 0s; }
+        .particle:nth-child(2) { left: 25%; animation-delay: 1.5s; }
+        .particle:nth-child(3) { left: 50%; animation-delay: 3s; }
+        .particle:nth-child(4) { left: 75%; animation-delay: 0.8s; }
+        .particle:nth-child(5) { left: 90%; animation-delay: 2.2s; }
+        .particle:nth-child(6) { left: 40%; animation-delay: 4s; }
+        .particle:nth-child(7) { left: 65%; animation-delay: 1s; }
+        .particle:nth-child(8) { left: 15%; animation-delay: 3.5s; }
+        @keyframes float-up {
+            0% { transform: translateY(100vh) scale(0); opacity: 0; }
+            10% { opacity: 0.6; }
+            90% { opacity: 0.2; }
+            100% { transform: translateY(-100px) scale(1); opacity: 0; }
+        }
+
+        /* Grid bg */
+        .grid-bg {
+            position: fixed;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background-image: 
+                linear-gradient(rgba(236,176,10,0.03) 1px, transparent 1px),
+                linear-gradient(90deg, rgba(236,176,10,0.03) 1px, transparent 1px);
+            background-size: 60px 60px;
+            pointer-events: none;
+            z-index: 0;
+        }
+        .container { position: relative; z-index: 1; }
+
         /* Hero */
         .hero {
             padding: 80px 0 60px;
             text-align: center;
+            position: relative;
         }
         .badge {
             display: inline-flex;
@@ -90,9 +171,13 @@
             border: 1px solid var(--border);
             border-radius: 16px;
             padding: 28px;
-            transition: border-color 0.2s;
+            transition: all 0.3s ease;
         }
-        .service:hover { border-color: rgba(236,176,10,0.4); }
+        .service:hover { 
+            border-color: rgba(236,176,10,0.4); 
+            transform: translateY(-4px);
+            box-shadow: 0 8px 30px rgba(236,176,10,0.08);
+        }
         .service-header {
             display: flex;
             justify-content: space-between;
@@ -146,6 +231,11 @@
             border: 1px solid var(--border);
             border-radius: 12px;
             padding: 20px;
+            transition: all 0.3s ease;
+        }
+        .speed-item:hover {
+            border-color: rgba(236,176,10,0.4);
+            transform: translateY(-4px);
         }
         .speed-item .number {
             font-size: 36px;
@@ -263,7 +353,19 @@
 </head>
 <body>
 
-<div class="container">
+<div class="grid-bg"></div>
+
+<div class="container hero-glow">
+    <div class="particles">
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+    </div>
 
     <!-- Hero -->
     <section class="hero">
