rebrand: AI Ваня → AI Макс, TG → @aigalsonpro

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AI Ваня — ИИ-сервисы для бизнеса</title>
+    <title>AI Макс — ИИ-сервисы для бизнеса</title>
     <meta name="description" content="Контент, боты, автоматизация. 30 постов за 30 минут. ИИ-ассистент за 2 часа.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -429,7 +429,7 @@
         </div>
         <h1>ИИ-сервисы<br><span class="gradient">для вашего бизнеса</span></h1>
         <p class="subtitle">Контент, боты, автоматизация. Делаю за часы то, что агентства делают за недели.</p>
-        <a href="https://t.me/AIvanyabot" class="btn">Написать в Telegram</a>
+        <a href="https://t.me/aigalsonpro" class="btn">Написать в Telegram</a>
     </section>
 
     <!-- Speed -->
@@ -567,7 +567,7 @@
         <div class="cta-box">
             <h2>Готовы попробовать?</h2>
             <p>Напишите задачу — покажу результат бесплатно. Без обязательств.</p>
-            <a href="https://t.me/AIvanyabot" class="btn">Написать в Telegram</a>
+            <a href="https://t.me/aigalsonpro" class="btn">Написать в Telegram</a>
             <br>
             <a href="mailto:aivanyabot@gmail.com" class="btn-secondary">или на почту aivanyabot@gmail.com</a>
         </div>
@@ -577,7 +577,7 @@
 
 <footer>
     <div class="container">
-        <p>AI Ваня — ИИ-сервисы для бизнеса · 2026</p>
+        <p>AI Макс — ИИ-сервисы для бизнеса · 2026</p>
     </div>
 </footer>
 
